// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > should optimize JSX Element 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
import { memo as _memo } from \\"react\\";
import { $$memo as _$$memo } from \\"forgetti/runtime\\";
const _Example = _$$memo(_memo, \\"_Example\\", _values => <div>
      <h1 title={_values[0]}>Title: {_values[1]}</h1>
      {_values[2]}
    </div>);
function Example(props) {
  let _cache = _$$cache(_useMemo, 10),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.title,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.title,
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4,
    _value6 = _equals ? _cache[5] : _cache[5] = _value.children,
    _equals4 = _$$equals(_cache, 6, _value6),
    _value7 = _equals4 ? _cache[6] : _cache[6] = _value6,
    _value8 = _equals2 && _equals3 && _equals4 ? _cache[7] : _cache[7] = [_value3, _value5, _value7],
    _equals6 = _$$equals(_cache, 8, _value8),
    _value9 = _equals6 ? _cache[8] : _cache[8] = _value8;
  return /*@forgetti jsx*/_equals6 ? _cache[9] : _cache[9] = <_Example v={_value9} />;
}"
`;

exports[`expressions > should optimize JSX Fragment 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
import { memo as _memo } from \\"react\\";
import { $$memo as _$$memo } from \\"forgetti/runtime\\";
const _Example = _$$memo(_memo, \\"_Example\\", _values => <>
      <h1 title={_values[0]}>Title: {_values[1]}</h1>
      {_values[2]}
    </>);
function Example(props) {
  let _cache = _$$cache(_useMemo, 10),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.title,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.title,
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4,
    _value6 = _equals ? _cache[5] : _cache[5] = _value.children,
    _equals4 = _$$equals(_cache, 6, _value6),
    _value7 = _equals4 ? _cache[6] : _cache[6] = _value6,
    _value8 = _equals2 && _equals3 && _equals4 ? _cache[7] : _cache[7] = [_value3, _value5, _value7],
    _equals6 = _$$equals(_cache, 8, _value8),
    _value9 = _equals6 ? _cache[8] : _cache[8] = _value8;
  return /*@forgetti jsx*/_equals6 ? _cache[9] : _cache[9] = <_Example v={_value9} />;
}"
`;

exports[`expressions > should optimize array expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 8),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.b,
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4,
    _value6 = _equals ? _cache[5] : _cache[5] = _value.c,
    _equals4 = _$$equals(_cache, 6, _value6),
    _value7 = _equals4 ? _cache[6] : _cache[6] = _value6;
  return _equals2 && _equals3 && _equals4 ? _cache[7] : _cache[7] = [_value3, _value5, ..._value7];
}"
`;

exports[`expressions > should optimize assignment expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 5),
    a,
    b,
    c,
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.x,
    _hoisted2 = c = _$$equals(_cache, 2, _value2) ? _cache[2] : _cache[2] = _value2,
    _hoisted = b = _$$equals(_cache, 3, _hoisted2) ? _cache[3] : _cache[3] = _hoisted2;
  a = _$$equals(_cache, 4, _hoisted) ? _cache[4] : _cache[4] = _hoisted;
}"
`;

exports[`expressions > should optimize binary expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 6),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.b,
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4;
  return _equals2 && _equals3 ? _cache[5] : _cache[5] = _value3 + _value5;
}"
`;

exports[`expressions > should optimize call expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 2),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props;
  return _equals ? _cache[1] : _cache[1] = _value.call();
}"
`;

exports[`expressions > should optimize conditional expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 4),
    _equals = _$$equals(_cache, 0, props),
    _value2 = _equals ? _cache[0] : _cache[0] = props,
    _value;
  if (_equals ? _cache[1] : _cache[1] = _value2.a) {
    let _cache2 = _$$branch(_cache, 2, 2),
      _equals2 = _$$equals(_cache2, 0, props),
      _value4 = _equals2 ? _cache2[0] : _cache2[0] = props;
    _value = _equals2 ? _cache2[1] : _cache2[1] = _value4.b;
  } else {
    let _cache3 = _$$branch(_cache, 3, 2),
      _equals3 = _$$equals(_cache3, 0, props),
      _value6 = _equals3 ? _cache3[0] : _cache3[0] = props;
    _value = _equals3 ? _cache3[1] : _cache3[1] = _value6.c;
  }
  return _value;
}"
`;

exports[`expressions > should optimize function expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 2),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props;
  const callback = _equals ? _cache[1] : _cache[1] = () => {
    console.log(props.message);
  };
}"
`;

exports[`expressions > should optimize guaranteed literals 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 1);
  return 0 in _cache ? _cache[0] : _cache[0] = 1 + 2;
}"
`;

exports[`expressions > should optimize identifiers 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 1);
  return _$$equals(_cache, 0, props) ? _cache[0] : _cache[0] = props;
}"
`;

exports[`expressions > should optimize logical expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 3),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _condition = _equals ? _cache[1] : _cache[1] = _value.a;
  if (_condition) {
    let _cache2 = _$$branch(_cache, 2, 2),
      _equals2 = _$$equals(_cache2, 0, props),
      _value3 = _equals2 ? _cache2[0] : _cache2[0] = props;
    _condition = _equals2 ? _cache2[1] : _cache2[1] = _value3.b;
  }
  return _condition;
}"
`;

exports[`expressions > should optimize member expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 2),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props;
  return _equals ? _cache[1] : _cache[1] = _value.example;
}"
`;

exports[`expressions > should optimize new expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 3),
    _value = 0 in _cache ? _cache[0] : _cache[0] = X,
    _equals = _$$equals(_cache, 1, props),
    _value2 = _equals ? _cache[1] : _cache[1] = props;
  return _equals ? _cache[2] : _cache[2] = new _value(_value2);
}"
`;

exports[`expressions > should optimize object expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 8),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.b,
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4,
    _value6 = _equals ? _cache[5] : _cache[5] = _value.c,
    _equals4 = _$$equals(_cache, 6, _value6),
    _value7 = _equals4 ? _cache[6] : _cache[6] = _value6;
  return _equals2 && _equals3 && _equals4 ? _cache[7] : _cache[7] = {
    a: _value3,
    b: _value5,
    ..._value7
  };
}"
`;

exports[`expressions > should optimize optional call expression 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 7),
    _nullish,
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a,
    _hoisted = _nullish = _$$equals(_cache, 2, _value2) ? _cache[2] : _cache[2] = _value2,
    _equals3 = _$$equals(_cache, 3, _hoisted),
    _value5 = _equals3 ? _cache[3] : _cache[3] = _hoisted,
    _value4;
  if (_equals3 ? _cache[4] : _cache[4] = _value5 == null) {
    let _cache2 = _$$branch(_cache, 5, 1);
    _value4 = 0 in _cache2 ? _cache2[0] : _cache2[0] = void 0;
  } else {
    let _cache3 = _$$branch(_cache, 6, 7),
      _equals4 = _$$equals(_cache3, 0, _nullish),
      _value8 = _equals4 ? _cache3[0] : _cache3[0] = _nullish,
      _equals5 = _$$equals(_cache3, 1, props),
      _value9 = _equals5 ? _cache3[1] : _cache3[1] = props,
      _value10 = _equals5 ? _cache3[2] : _cache3[2] = _value9.b,
      _equals6 = _$$equals(_cache3, 3, _value10),
      _value11 = _equals6 ? _cache3[3] : _cache3[3] = _value10,
      _value12 = _equals5 ? _cache3[4] : _cache3[4] = _value9.c,
      _equals7 = _$$equals(_cache3, 5, _value12),
      _value13 = _equals7 ? _cache3[5] : _cache3[5] = _value12;
    _value4 = _equals4 && _equals && _equals6 && _equals7 ? _cache3[6] : _cache3[6] = _value8.call(_value, _value11, _value13);
  }
  return _value4;
}"
`;

exports[`expressions > should optimize optional member expression 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$branch as _$$branch } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 14),
    _nullish,
    _nullish2,
    _equals = _$$equals(_cache, 0, props),
    _value2 = _equals ? _cache[0] : _cache[0] = props,
    _value;
  if (_equals ? _cache[1] : _cache[1] = _value2 == null) {
    let _cache2 = _$$branch(_cache, 2, 1);
    _value = 0 in _cache2 ? _cache2[0] : _cache2[0] = void 0;
  } else {
    let _cache3 = _$$branch(_cache, 3, 2),
      _value5 = _$$equals(_cache3, 0, props) ? _cache3[0] : _cache3[0] = props;
    _value = _equals ? _cache3[1] : _cache3[1] = _value2.a;
  }
  let _hoisted2 = _nullish2 = _$$equals(_cache, 4, _value) ? _cache[4] : _cache[4] = _value,
    _equals4 = _$$equals(_cache, 5, _hoisted2),
    _value9 = _equals4 ? _cache[5] : _cache[5] = _hoisted2,
    _value8;
  if (_equals4 ? _cache[6] : _cache[6] = _value9 == null) {
    let _cache4 = _$$branch(_cache, 7, 1);
    _value8 = 0 in _cache4 ? _cache4[0] : _cache4[0] = void 0;
  } else {
    let _cache5 = _$$branch(_cache, 8, 2),
      _equals5 = _$$equals(_cache5, 0, _nullish2),
      _value12 = _equals5 ? _cache5[0] : _cache5[0] = _nullish2;
    _value8 = _equals5 ? _cache5[1] : _cache5[1] = _value12.b;
  }
  let _hoisted = _nullish = _$$equals(_cache, 9, _value8) ? _cache[9] : _cache[9] = _value8,
    _equals7 = _$$equals(_cache, 10, _hoisted),
    _value16 = _equals7 ? _cache[10] : _cache[10] = _hoisted,
    _value15;
  if (_equals7 ? _cache[11] : _cache[11] = _value16 == null) {
    let _cache6 = _$$branch(_cache, 12, 1);
    _value15 = 0 in _cache6 ? _cache6[0] : _cache6[0] = void 0;
  } else {
    let _cache7 = _$$branch(_cache, 13, 2),
      _equals8 = _$$equals(_cache7, 0, _nullish),
      _value19 = _equals8 ? _cache7[0] : _cache7[0] = _nullish;
    _value15 = _equals8 ? _cache7[1] : _cache7[1] = _value19.c;
  }
  return _value15;
}"
`;

exports[`expressions > should optimize sequence expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 3),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props;
  return _equals ? _cache[1] : _cache[1] = _value.a(), _equals ? _cache[2] : _cache[2] = _value.b();
}"
`;

exports[`expressions > should optimize tagged templates 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 8),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.tag,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.a(),
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4,
    _value6 = _equals ? _cache[5] : _cache[5] = _value.b(),
    _equals4 = _$$equals(_cache, 6, _value6),
    _value7 = _equals4 ? _cache[6] : _cache[6] = _value6;
  return _equals2 && _equals3 && _equals4 ? _cache[7] : _cache[7] = _value3\`\${_value5}, \${_value7}\`;
}"
`;

exports[`expressions > should optimize template literals 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 6),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a(),
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2,
    _value4 = _equals ? _cache[3] : _cache[3] = _value.b(),
    _equals3 = _$$equals(_cache, 4, _value4),
    _value5 = _equals3 ? _cache[4] : _cache[4] = _value4;
  return _equals2 && _equals3 ? _cache[5] : _cache[5] = \`\${_value3}, \${_value5}\`;
}"
`;

exports[`expressions > should optimize unary expressions 1`] = `
"import { useMemo as _useMemo } from \\"react\\";
import { $$cache as _$$cache } from \\"forgetti/runtime\\";
import { $$equals as _$$equals } from \\"forgetti/runtime\\";
function Example(props) {
  let _cache = _$$cache(_useMemo, 4),
    _equals = _$$equals(_cache, 0, props),
    _value = _equals ? _cache[0] : _cache[0] = props,
    _value2 = _equals ? _cache[1] : _cache[1] = _value.a,
    _equals2 = _$$equals(_cache, 2, _value2),
    _value3 = _equals2 ? _cache[2] : _cache[2] = _value2;
  return _equals2 ? _cache[3] : _cache[3] = !_value3;
}"
`;
